import "extension.proto";
import "la.proto";

package NEgoProto;


message TModelConfig {
    optional string Cov = 1 [default = "cExpISO"];
    optional string Mean = 2 [default = "mConst"];
    optional string Inf = 3 [default = "iExact"];
    optional string Lik = 4 [default = "lGauss"];
    optional string Acq = 5 [default = "aEI"];

    optional uint32 Seed = 6 [default = 0];
}

message TModelConfigMessage {
    optional TModelConfig ModelConfig = 1;
}

message TModelState {
    optional TModelConfig ModelConfig = 1;
    optional TMatrixD X = 2;
    optional TVectorD Y = 3;
    optional TVectorD Parameters = 4;
}
