#pragma once


#include <ego/model/model.h>


namespace NEgo {

	// class TProblem {
	// public:
	// 	TProblem(TProblemConfig problem, TModelConfig config)
	// 		, Model(config, problem.DimSize)
	// 	{
	// 	}

	// 	TString GetName() const {
	// 		return Config.Name;
	// 	}

	// private:
	// 	TProblemConfig Config;
	// };

} // namespace NEgo